# Ai_Resume_Analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  nixpacks.toml  pyproject.toml  requirements.txt  start-backend.sh  start.sh
.streamlit/: config.toml
App/: .env.example  App.py  Courses.py  analysis_data.py  api_server.py  matching_utils.py  parser_utils.py  requirements.txt  resume_analysis_core.py  test_api_server.py  ui_styles.py
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: server.py
backend/app/api/routes/: analysis.py
backend/app/core/: analysis_data.py  matching.py  parser.py  resume_analysis.py
backend/app/models/: analysis.py
backend/app/schemas/: __init__.py  analysis.py
backend/app/services/: analysis_service.py
frontend/: __init__.py  api_client.py  app.py
frontend/assets/fonts/: OFL.txt
frontend/components/: admin_dashboard.py  navigation.py  report.py  styles.py
frontend/pages/: about.py  admin.py  candidate.py  feedback.py  home.py  results.py
frontend/services/: __init__.py  pdf_parser.py  storage.py
requirements/: dev.txt  semantic.txt
tests/: test_api_client.py  test_api_server.py  test_architecture.py  test_frontend_navigation.py  test_matching_utils.py  test_parser_utils.py  test_project_structure.py  test_resume_analysis_core.py
